--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.24",
     "next": "16.0.5",
