--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.24",
-    "next": "16.0.5",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
