--- a/.env.local
+++ b/.env.local
@@ -8,7 +8,7 @@ SMTP_PORT=587
 SMTP_SECURE=false
 
 # Your email address and password (or App Password)
-# SMTP_USER=mohanavenkatesh.work@gmail.com
+SMTP_USER=mohanavenkatesh.work@gmail.com
 # SMTP_PASS=qswu iwvi bchr agbc
 
 # Email settings
