--- a/.env.local
+++ b/.env.local
@@ -9,7 +9,7 @@ SMTP_SECURE=false
 
 # Your email address and password (or App Password)
 SMTP_USER=mohanavenkatesh.work@gmail.com
-# SMTP_PASS=qswu iwvi bchr agbc
+SMTP_PASS=qswu iwvi bchr agbc
 
 # Email settings
 SMTP_FROM="VJ Scans Website" <no-reply@vjscans.com>
