Add SMTP test script and update .env.local
Add scripts/test-email.js: a Node script that loads .env.local into process.env, verifies SMTP connectivity with nodemailer, warns if SMTP_PASS contains spaces, and sends a test email to validate configuration. Also update .env.local to change the SMTP_PASS value and clean up trailing whitespace/comments. This change helps debug and validate email settings (host/port/user/auth) during development.

--- a/.env.local
+++ b/.env.local
@@ -9,10 +9,9 @@ SMTP_SECURE=false
 
 # Your email address and password (or App Password)
 SMTP_USER=mohanavenkatesh.work@gmail.com
-SMTP_PASS=qswu iwvi bchr agbc
+SMTP_PASS=lzlu lhtu sdfs ziaa
+
 
 # Email settings
 SMTP_FROM="VJ Scans Website" <no-reply@vjscans.com>
 CONTACT_EMAIL=mohanavenkatesh.work@gmail.com
-
-# MANGODB
